--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.12",
