--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "seed": "tsx scripts/seed-test-data.ts",
-    "generate-types": "npx supabase gen types typescript --local > src/db/database.types.ts"
+    "generate-types": "npx supabase gen types typescript --local > src/db/database.types.ts",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "playwright:install": "playwright install chromium"
   },
   "dependencies": {
     "@astrojs/node": "^9.4.3",
@@ -50,9 +59,16 @@
   "devDependencies": {
     "@eslint/compat": "1.2.7",
     "@eslint/js": "9.23.0",
+    "@playwright/test": "^1.56.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/mapbox-gl": "^3.4.1",
     "@typescript-eslint/eslint-plugin": "8.28.0",
     "@typescript-eslint/parser": "8.28.0",
+    "@vitejs/plugin-react": "^5.1.0",
+    "@vitest/coverage-v8": "^4.0.5",
+    "@vitest/ui": "^4.0.5",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
     "eslint-import-resolver-typescript": "4.2.5",
@@ -63,11 +79,15 @@
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-compiler": "19.0.0-beta-aeaed83-20250323",
     "eslint-plugin-react-hooks": "5.2.0",
+    "happy-dom": "^20.0.10",
     "husky": "9.1.7",
+    "jsdom": "^27.0.1",
     "lint-staged": "15.5.0",
+    "msw": "^2.11.6",
     "prettier-plugin-astro": "0.14.1",
     "tsx": "^4.19.2",
-    "typescript-eslint": "8.28.0"
+    "typescript-eslint": "8.28.0",
+    "vitest": "^4.0.5"
   },
   "lint-staged": {
     "*.{ts,tsx,astro}": [
