chore: implemented cron for publish daily sets

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ OPENROUTER_API_KEY=###
 
 # Mapbox configuration for interactive map component
 PUBLIC_MAPBOX_ACCESS_TOKEN=pk.your_mapbox_token_here
+
+# Cron job secret for auto-publishing daily sets at 00:00 UTC
+# Generate with: openssl rand -base64 32
+CRON_SECRET=
