--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@astrojs/cloudflare": "^12.6.10",
     "@eslint/compat": "1.2.7",
     "@eslint/js": "9.23.0",
     "@playwright/test": "^1.56.1",
@@ -89,7 +90,8 @@
     "prettier-plugin-astro": "0.14.1",
     "tsx": "^4.19.2",
     "typescript-eslint": "8.28.0",
-    "vitest": "^4.0.5"
+    "vitest": "^4.0.5",
+    "wrangler": "^4.45.3"
   },
   "lint-staged": {
     "*.{ts,tsx,astro}": [
