fix: changes to met cloudflare requirements - changes in wrangler.toml and astro.config.mjs

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,11 +2,16 @@
 # See: https://developers.cloudflare.com/pages/functions/wrangler-configuration/
 
 name = "unball"
-compatibility_date = "2024-01-01"
-pages_build_output_dir = "./dist"
+compatibility_date = "2025-11-02"
 
 # For local development with Wrangler
 # Run: npx wrangler pages dev ./dist
+
+[build]
+command = "npm ci --ignore-scripts && npm run build && if [ -f dist/routes.json ]; then mv dist/routes.json dist/_routes.json; fi"
+
+[pages]
+pages_build_output_dir = "dist"
 
 [env.production]
 # Environment variables for production (set in Cloudflare dashboard or via GitHub secrets)
