--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,6 +34,7 @@ jobs:
     name: Deploy to Cloudflare Pages
     runs-on: ubuntu-latest
     needs: quality-check
+    environment: PUBLIC_MAPBOX_ACCESS_TOKEN
     permissions:
       contents: read
       deployments: write
