--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -30,6 +30,27 @@ jobs:
       - name: Run linting
         run: npm run lint
 
+      - name: Run unit tests
+        run: npm run test
+
+      - name: Build project
+        run: npm run build
+
+      - name: Install Playwright browsers
+        run: npm run playwright:install
+
+      - name: Run E2E tests
+        run: npm run test:e2e
+        continue-on-error: true
+
+      - name: Upload E2E test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
   deploy:
     name: Deploy to Cloudflare Pages
     runs-on: ubuntu-latest
